--- a/app/dropdown.html
+++ b/app/dropdown.html
@@ -20,16 +20,14 @@
 
 <body>
     <div class="continer">
-        <h1>Bootstrap tutorials</h1>
+        <h1>Bootstrap Dropdowns</h1>
     </div>
     <div class="container">
-        <div class="row">
-            <div class="col-md-3">
-                <a href="glyphs.html"><button class="btn btn-default">Glyphicons</button></a>
-            </div>
-            <div class="col-md-3">
-                <a href="dropdown.html"><button class="btn btn-default">Dropdown</button></a>
-            </div>
+        <div class="dropdown">
+            <button class="btn dropdown-toggle sr-only" type="button" id="dropdownMenu1" data-toggle="dropdown">
+                Dropdown
+                <span class="caret"></span>
+            </button>            
         </div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
