--- a/app/glyphs.html
+++ b/app/glyphs.html
@@ -8,8 +8,8 @@
     <title>Bootstrap 101 Template</title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/default.css" rel="stylesheet" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -23,6 +23,15 @@
         <h1>Glyphicons in BootStrap</h1>
     </div>
     <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <pre>
+                    <code class="html">
+                        &lt;span class="glyphicon glyphicon-adjust"&gt;&lt;/span&gt;
+                    </code>
+                </pre>
+            </div>
+        </div>
         <div class="row">
             <p>
                 <div class="col-md-6">
@@ -2031,6 +2040,10 @@
     <script src="js/jquery-1.11.0.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/highlight.pack.js"></script>
+    <script type="text/javascript">
+        hljs.initHighlightingOnLoad();
+    </script>
 </body>
 
 </html>
