--- a/app/glyphs.html
+++ b/app/glyphs.html
@@ -9,7 +9,7 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/default.css" rel="stylesheet" />
+    <link href="css/SyntaxHighlighter.css" rel="stylesheet" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -25,10 +25,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <pre>
-                    <code class="html">
-                        &lt;span class="glyphicon glyphicon-adjust"&gt;&lt;/span&gt;
-                    </code>
+                <pre name="code" class="html">
+&lt;span class="glyphicon glyphicon-adjust"&gt;&lt;/span&gt;
                 </pre>
             </div>
         </div>
@@ -2040,10 +2038,12 @@
     <script src="js/jquery-1.11.0.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/highlight.pack.js"></script>
-    <script type="text/javascript">
-        hljs.initHighlightingOnLoad();
-    </script>
+    <script language="javascript" src="js/shCore.js"></script>
+    <script language="javascript" src="js/shBrushXml.js"></script>
+    <script language="javascript">
+dp.SyntaxHighlighter.ClipboardSwf = '/flash/clipboard.swf';
+dp.SyntaxHighlighter.HighlightAll('code');
+</script>
 </body>
 
 </html>
